Enhanced search list on edit shelving unit to add products more comfortably